Fix spacing issues

--- a/src/bpm.css
+++ b/src/bpm.css
@@ -1,7 +1,7 @@
 body {
     background-color:		#cccac8;
     font-family:        	Arial, Helvetica, sans-serif;
-    font-size:			small;
+    font-size:			medium;
     margin:			0px;
 }
 
@@ -9,6 +9,8 @@ body {
      margin:			120px 475px 0px 475px;
      background-color:		#FFFFFF;
      padding:			5px;
+     padding-top:		0px;
+     padding-bottom:		0px;
      height:			350px;
      width:			410px;
 }
@@ -26,6 +28,7 @@ img#epl-logo {
 
 #login-title {
     text-align:			center;
+    font-size:			24px;
     padding-top:		20px;
 }
 
